[tool.poetry]
name = "pulse"
version = "0.1.0"
description = ""
authors = ["Lapin Maksim <katafoxi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
celery = {extras = ["redis"], version = "^5.2.7"}
pyrabbit = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
